--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -8,10 +8,16 @@ add_executable(betterwallpaper
     widgets/WallpaperGrid.cpp
     widgets/MonitorLayout.cpp
     widgets/MonitorConfigPanel.cpp
+    widgets/PreviewPanel.cpp
     dialogs/TagDialog.cpp
     views/LibraryView.cpp
     views/MonitorsView.cpp
+    views/MonitorsView.cpp
     views/FolderView.cpp
+    views/WorkshopView.cpp
+    views/SettingsView.cpp
+    views/FavoritesView.cpp
+    views/RecentView.cpp
 )
 
 target_link_libraries(betterwallpaper PRIVATE
