--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,12 +21,15 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
 # Dependencies
 find_package(PkgConfig REQUIRED)
+pkg_check_modules(GIO REQUIRED IMPORTED_TARGET GLOBAL gio-2.0)
 pkg_check_modules(GTK4 REQUIRED IMPORTED_TARGET GLOBAL gtk4)
 pkg_check_modules(LIBADWAITA REQUIRED IMPORTED_TARGET GLOBAL libadwaita-1)
 pkg_check_modules(GTK4_LAYER_SHELL REQUIRED IMPORTED_TARGET GLOBAL gtk4-layer-shell-0)
 pkg_check_modules(MPV REQUIRED mpv)
 pkg_check_modules(CURL REQUIRED libcurl)
 pkg_check_modules(WAYLAND_CLIENT REQUIRED wayland-client)
+pkg_check_modules(GTK3 IMPORTED_TARGET GLOBAL gtk+-3.0)
+pkg_check_modules(APPINDICATOR3 IMPORTED_TARGET GLOBAL appindicator3-0.1)
 
 # Create aliases for compatibility with existing code
 if(TARGET PkgConfig::GTK4)
@@ -35,6 +38,10 @@ endif()
 
 if(TARGET PkgConfig::LIBADWAITA)
     add_library(LIBADWAITA::libadwaita-1 ALIAS PkgConfig::LIBADWAITA)
+endif()
+
+if(TARGET PkgConfig::GIO)
+    add_library(GIO::gio-2.0 ALIAS PkgConfig::GIO)
 endif()
 
 find_package(WaylandProtocols REQUIRED)
@@ -67,3 +74,15 @@ add_subdirectory(tests)
 
 # Packaging/Installation
 include(GNUInstallDirs)
+
+install(FILES betterwallpaper.desktop
+    DESTINATION ${CMAKE_INSTALL_DATADIR}/applications
+)
+
+install(FILES packaging/betterwallpaper-daemon.service
+    DESTINATION lib/systemd/user
+)
+
+install(FILES packaging/betterwallpaper-tray.desktop
+    DESTINATION /etc/xdg/autostart
+)
