--- a/betterwallpaper.desktop
+++ b/betterwallpaper.desktop
@@ -2,8 +2,8 @@
 Type=Application
 Name=BetterWallpaper
 Comment=Manage and set animated wallpapers
-Exec=/home/onxy/.local/bin/betterwallpaper
-Icon=/home/onxy/.local/share/icons/hicolor/512x512/apps/betterwallpaper.png
+Exec=betterwallpaper
+Icon=betterwallpaper
 Terminal=false
 Categories=Utility;GTK;
 Keywords=wallpaper;background;animated;live;
