--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_executable(bwp main.cpp)
 
 target_link_libraries(bwp PRIVATE
-    bwp_core
+    bwp_ipc
 )
 
 install(TARGETS bwp DESTINATION ${CMAKE_INSTALL_BINDIR})
