--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -1,8 +1,8 @@
-# Maintainer: Onxy <onxy@example.com>
+# Maintainer: Onxy <mihalygyori05@gmail.com>
 pkgname=betterwallpaper-git
-pkgver=0.4.0
+pkgver=0.4.1
 pkgrel=1
-pkgdesc="A modern, high-performance animated wallpaper manager for Linux"
+pkgdesc="A modern, high-performance animated wallpaper manager for Linux (hotfix: GUI no longer removes daemon wallpaper on launch)"
 arch=('x86_64')
 url="https://github.com/Misiix9/BetterWallpaper"
 license=('GPL3')
@@ -15,6 +15,10 @@ depends=(
     'wayland'
     'libayatana-appindicator'
     'glew'
+    linux-wallpaperengine'
+    'swaybg'
+    'swww'
+    'hyprpaper'
 )
 optdepends=(
     'linux-wallpaperengine: for Wallpaper Engine scene support'
